# biji-mcp

./: .gitignore  README.md  config.example.json  pyproject.toml
src/biji_mcp/: __init__.py  client.py  config.py  server.py  tools.py
tests/: __init__.py  test_client.py  test_config.py  test_integration.py  test_tools.py
